# zero2prod

./: .env  .gitignore  Cargo.toml  configration.yaml
migrations/: 20240616165530_create_subscriptions_table.sql
scripts/: init_db.bash
src/: configration.rs  lib.rs  main.rs  startup.rs
src/routes/: subcriptions.rs
tests/: health_check.rs
